--- a/index.html
+++ b/index.html
@@ -24,9 +24,18 @@
 			<h1>Akira's Homepage</h1>
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
-					<img class="cat-photo" src="./img/cute-grey-kitten.jpg">
+					<a href="https://www.google.com/imghp?hl=en&tab=ri&authuser=0&ogbl" target="_blank">
+						<img class="goat-photo" src="./img/goat1.jpg" alt="Goat">
+					</a>
+					<a href="https://en.wikipedia.org/wiki/goat" target="_new">Learn More</a>
 					<h2>About Me</h2>
 					<p>Uhhh... um.. uughhhh... ouhghh</p>
+					<h2>Cool Goat Facts</h2>
+					<ol>
+						<li>They can come in many different shapes and colors</li>
+						<li>They can be friend or foe</li>
+						<li>They can NOT understand complex numbers or vector math</li>
+					</ol>
 			</div>
 
 		</section>
