--- a/lab2/lab2index.html
+++ b/lab2/lab2index.html
@@ -1,20 +1,23 @@
 <html>
 	<head>
 		<title>Lab 2</title>
+		
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>
     <body>
-        <h1> Hello World </h1>
-	    <section>
-		    <div class="minor-section">
-			    <h2>About Us</h2>
-			    <h3>Damon Pham</h3>
-			    <p>Blah blah blah</p>
-			    <h3>Akira Shemansky</h3>
-			    <p>Blah Blah Blah</p>
+		<main id="content">
+        	<h1> Hello World </h1>
+	    	<section>
+		    	<div class="minor-section">
+			    	<h2>About Us</h2>
+			    	<h3>Damon Pham</h3>
+			    	<p>Blah blah blah</p>
+			    	<h3>Akira Shemansky</h3>
+			    	<p>Blah Blah Blah</p>
 
-		    </div>
-	    </section>
+		    	</div>
+	    	</section>
+		</main>
     </body>
 </html>
