--- a/lab2/lab2index.html
+++ b/lab2/lab2index.html
@@ -4,20 +4,19 @@
 		
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+		<link rel="stylesheet" type="text/css" href="css/lab2.css" />
 	</head>
     <body>
 		<main id="content">
         	<h1> Hello World </h1>
-	    	<section>
-		    	<div class="minor-section">
-			    	<h2>About Us</h2>
-			    	<h3>Damon Pham</h3>
-			    	<p>Blah blah blah</p>
-			    	<h3>Akira Shemansky</h3>
-			    	<p>Blah Blah Blah</p>
-
-		    	</div>
-	    	</section>
+			<div class="minor-section">
+			    <h2>About Us</h2>
+			    <h3>Damon Pham</h3>
+			    <p>Hello! My name is Damon and I am a CS major. My hobbies consist of playing tennis and video games.</p>
+			    <h3>Akira Shemansky</h3>
+			    <p>Hi! My name is Akira and I'm an AGPM major. I like playing video games and I'm interested in game design, writing, art, and music. I'm also interested in learning a bit of programming just to be a little more well-rounded.</p>
+			</div>
 		</main>
     </body>
 </html>
