--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 		</section>
 		<nav id="links">
 			<!-- Put links to labs here. -->
+			<a href="lab2/lab2index.html" target="_new">Lab 2</a>
 		</nav>
 	</main>
 </body>
