--- a/index.html
+++ b/index.html
@@ -1,48 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- This title is used for tabs and bookmarks -->
-	<title>Akira's Homepage</title>
-
-	<!-- Use UTF character set, a good idea with any webpage -->
-	<meta charset="UTF-8" />
-	<!-- Set viewport so page remains consistently scaled w narrow devices -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-	<!-- Include a sitewide CSS file for consistent styling across the site -->
-	<link rel="stylesheet" type="text/css" href="css/site.css">
-	<!-- Lab-specifc CSS file for any special styling of this particular page -->
-	<link rel="stylesheet" type="text/css" href="css/homepage.css">
-	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
-
-	<!-- <script type="text/javascript" src="./js/lab.js" DEFER></script> -->
+    <title>Akira's Site</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="./css/site.css">
 </head>
 <body>
-	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
-	<main id="content">
-		<section>
-			<h1>Akira's Homepage</h1>
-			<div class="minor-section">
-					<!-- Note that all filenames use lowercase and no spaces -->
-					<a href="https://www.google.com/imghp?hl=en&tab=ri&authuser=0&ogbl" target="_blank">
-						<img class="goat-photo" src="./img/goat3.jpg" alt="Goat">
-					</a>
-					<a href="https://en.wikipedia.org/wiki/goat" target="_new">Learn More</a>
-					<h2>About Me</h2>
-					<p>Uhhh... um.. uughhhh... ouhghh</p>
-					<h2>Cool Goat Facts</h2>
-					<ol>
-						<li>They can come in many different shapes and colors</li>
-						<li>They can be friend or foe</li>
-						<li>They can NOT understand complex numbers or vector math</li>
-					</ol>
-			</div>
-
-		</section>
-		<nav id="links">
-			<!-- Put links to labs here. -->
-			<a href="lab2/index.html" target="_new">Lab 2</a>
-		</nav>
-	</main>
+    <section id="content">
+        <h1>Akira's Site</h1>
+        <img id="my-portrait" src="./img/me.jpg" alt="Me" width="300">
+        <div id="about">
+            <h2>About Me</h2>
+            <p>Hi! My name is Akira, and I'm a second-year AGPM major. I'm interested in game design, writing, art, and
+                really all parts of game development. My hobbies include playing video games, drawing, and learning how
+                to play the keyboard.</p>
+        </div>
+    </section>
+    <nav class="links">
+        <h2>Links</h2>
+        <ul>
+            <li><a href="lab2/index.html">Lab 2: First HTML</a></li>
+            <li><a href="lab3/index.html">Lab 3: File Structures</a></li>
+            <li><a href="lab4/index.html">Lab 4</a></li>
+            <li><a href="lab5/index.html">Lab 5</a></li>
+            <li><a href="lab6/index.html">Lab 6</a></li>
+        </ul>
+        <a href="legacy.html" target="_new">Old Homepage</a>
+    </nav>
 </body>
 </html>
