--- a/lab3/index.html
+++ b/lab3/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 3 - File Structure and File Transfer</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,29 +23,36 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			<h1>Lab 3 - File Structure and File Transfer</h1>
 			<div class="minor-section">
-					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<h2>Big Idea</h2>
+					<p>The goal of this lab was to create a local file structure and add index.html files.</p>
 			</div>
 
 			<div class="minor-section">
-					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<h2>Challenges</h2>
+					<p>So far, I haven't had any problems working in HTML and CSS. My biggest challenge was trying to find colors
+						that worked for my homepage.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
-					<div id="output"></div>
+					<p>I made a new homepage from scratch, using the old one as a guide. The page you're currently looking at was
+						modified from a template, though.</p>
+					<div id="output">
+						<img src="./img/ART101_Lab3_file_struct.png" alt="My file structure">
+						<img src="./img/ART101_Lab3_homepage_html.png" alt="The html for my homepage">
+						<img src="./img/ART101_Lab3_homepage_html_appearance.png" alt="My homepage with only html">
+						<img src="./img/ART101_Lab3_lab_html.png" alt="The html for this page">
+						<img src="./img/ART101_Lab3_lab_html_appearance.png" alt="This page with only html">
+					</div>
 			</div>
 		</section>
-		<nav id="links">
+		<nav class="links">
 			<!-- Put links to other pages (including the homepage) here. -->
+			<a href="../index.html">Home</a>
+			<a href="../lab2/index.html">Previous</a>
+			<a href="../lab4/index.html">Next</a>
 		</nav>
 	</main>
 </body>
