--- a/lab3/index.html
+++ b/lab3/index.html
@@ -48,7 +48,7 @@
 					</div>
 			</div>
 		</section>
-		<nav class="links">
+		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
 			<a href="../index.html">Home</a>
 			<a href="../lab2/index.html">Previous</a>
