--- a/lab5/index.html
+++ b/lab5/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 5 - Data Types and Variables</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,29 +23,42 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
-			<div class="minor-section">
+			<h1>Lab 5 - Data Types and Variables</h1>
+			<div id="challenge" class="minor-section">
+				<div>
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>The goal was to experiment with basic data types and variables in JavaScript and write a small program based
+						around a vehicle.</p>
+				</div>
+				<img id="accord" src="./img/Accord-front-quarter-433.jpg" alt="2018 Honda Accord">
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>I didn't have any problems doing this lab. Each task was straightforward, and I didn't run into any issues
+						doing them.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
-					<div id="output"></div>
+					<p>You're already looking at the index.html file I made. The program and a screenshot of its code are below.</p>
+					<div id="output">
+						<div class="output">
+							<h3>JavaScript</h3>
+							<img id="my-js" src="./img/ART101_Lab5_JS.png" alt="My JavaScript">
+						</div>
+						<div class="output">
+							<h3>Script Output</h3>
+							<script type="text/javascript" src="./js/lab.js"></script>
+						</div>
+					</div>
 			</div>
 		</section>
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
+			<a href="../index.html">Home</a>
+			<a href="../lab4/index.html">Previous</a>
+			<a href="../lab6/index.html">Next</a>
 		</nav>
 	</main>
 </body>
