--- a/lab6/index.html
+++ b/lab6/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 6 - Arrays and Objects</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,29 +23,42 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
-			<div class="minor-section">
+			<h1>Lab 6 - Arrays and Objects</h1>
+			<div id="top">
+				<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>The goal of this lab was to experiment with arrays and objects in JavaScript and create a tiny program.</p>
+				</div>
+				<img src="../lab5/img/Accord-front-quarter-433.jpg" alt="2018 Honda Accord">
 			</div>
 
 			<div class="minor-section">
-					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+				<h2>Problems</h2>
+				<p>I had a small problem with my JavaScript syntax, but I figured it out pretty quickly. I had accidentally added
+					an extra semicolon to the object declaration after age. When I noticed it, I removed the semicolon and my program
+					worked properly.</p>
 			</div>
 
 			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Results</h2>
-					<div id="output"></div>
+				<h2>Results</h2>
+				<p>You can see my index.html file right here. Below is my JavaScript Program and its output.</p>
+				<div id="output">
+					<div>
+						<h3>JavaScript Code</h3>
+						<img id="my-js" src="img/ART101_Lab6_JS.png" alt="My JavaScript Code">
+					</div>
+					<div>
+						<h3>Script Output</h3>
+						<script src="js/lab.js"></script>
+					</div>
+				</div>
 			</div>
 		</section>
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
+			<a href="../index.html">Home</a>
+			<a href="../lab5/index.html">Previous</a>
+			<!--a href="../lab7/index.html">Next</a-->
 		</nav>
 	</main>
 </body>
