--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="lab3/index.html">Lab 3: File Structures</a></li>
             <li><a href="lab4/index.html">Lab 4: Pseudocoding</a></li>
             <li><a href="lab5/index.html">Lab 5: Data Types and Variables</a></li>
-            <li><a href="lab6/index.html">Lab 6</a></li>
+            <li><a href="lab6/index.html">Lab 6: Arrays and Objects</a></li>
         </ul>
         <a href="legacy.html" target="_new">Old Homepage</a>
     </nav>
