--- a/lab6/index.html
+++ b/lab6/index.html
@@ -58,7 +58,7 @@
 			<!-- Put links to other pages (including the homepage) here. -->
 			<a href="../index.html">Home</a>
 			<a href="../lab5/index.html">Previous</a>
-			<!--a href="../lab7/index.html">Next</a-->
+			<a href="../lab7/index.html">Next</a>
 		</nav>
 	</main>
 </body>
