--- a/lab7/index.html
+++ b/lab7/index.html
@@ -47,7 +47,7 @@
         <nav id="links">
             <a href="../index.html">Home</a>
 			<a href="../lab6/index.html">Previous</a>
-			<!--a href="../lab8/index.html">Next</a-->
+			<a href="../lab8/index.html">Next</a>
         </nav>
     </main>
 </body>
