--- a/lab8/index.html
+++ b/lab8/index.html
@@ -41,7 +41,7 @@
 		<nav id="links">
 			<a href="../index.html">Home</a>
 			<a href="../lab7/index.html">Previous</a>
-			<!--a href="../lab9/index.html">Next</a-->
+			<a href="../lab9/index.html">Next</a>
 		</nav>
 	</main>
 </body>
