--- a/lab9/index.html
+++ b/lab9/index.html
@@ -49,7 +49,8 @@
         <nav id="links">
             <a href="../index.html">Home</a>
 			<a href="../lab8/index.html">Previous</a>
-			<!--a href="../lab10/index.html">Next</a-->
+			<a href="../lab10/index.html">Next</a>
         </nav>
     </main>
 </body>
+</html>
