--- a/lab10/index.html
+++ b/lab10/index.html
@@ -48,7 +48,7 @@
 		<nav id="links">
 			<a href="../index.html">Home</a>
 			<a href="../lab9/index.html">Previous</a>
-			<!--a href="../lab11/index.html">Next</a-->
+			<a href="../lab11/index.html">Next</a>
 		</nav>
 	</main>
 </body>
