--- a/experiments/11-15-2023.html
+++ b/experiments/11-15-2023.html
@@ -8,5 +8,6 @@
 <body>
     <h1 id="title">Hello World!</h1>
     <button id="my-button">Click Me</button>
+    <input type="text" id="input" placeholder="What is your name?">
 </body>
 </html>
