--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li><a href="lab8/index.html">Lab 8: Anon Functions and Callbacks</a></li>
             <li><a href="lab9/index.html">Lab 9: Libraries and jQuery</a></li>
             <li><a href="lab10/index.html">Lab 10: JavaScript for the Web</a></li>
+            <li><a href="lab11/index.html">Lab 11: Events and Forms</a></li>
         </ul>
         <a href="legacy.html" target="_new">Old Homepage</a>
     </nav>
