--- a/lab11/index.html
+++ b/lab11/index.html
@@ -49,7 +49,9 @@
         <nav id="links">
             <a href="../index.html">Home</a>
 			<a href="../lab10/index.html">Previous</a>
-			<!--a href="../lab12/index.html">Next</a-->
+			<a href="../lab12/index.html">Next</a>
+
+            <a href="js/lab.js" id="source-code" target="_new">Source Code</a>
         </nav>
     </main>
 </body>
