--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <li><a href="lab10/index.html">Lab 10: JavaScript for the Web</a></li>
             <li><a href="lab11/index.html">Lab 11: Events and Forms</a></li>
             <li><a href="lab12/index.html">Lab 12: Conditionals</a></li>
+            <li><a href="lab13/index.html">Lab 13: Loops</a></li>
         </ul>
         <a href="legacy.html" target="_new">Old Homepage</a>
     </nav>
