--- a/lab12/index.html
+++ b/lab12/index.html
@@ -44,7 +44,7 @@
         <nav id="links">
             <a href="../index.html">Home</a>
 			<a href="../lab11/index.html">Previous</a>
-			<!--a href="../lab13/index.html">Next</a-->
+			<a href="../lab13/index.html">Next</a>
 
             <a href="js/lab.js" id="source-code" target="_new">Source Code</a>
         </nav>
