--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Akira's Site</title>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="./css/site.css">
@@ -17,8 +18,9 @@
                 to play the keyboard.</p>
         </div>
     </section>
+
     <nav class="links">
-        <h2>Links</h2>
+        <h2>Labs</h2>
         <ul>
             <li><a href="lab2/index.html">Lab 2: First HTML</a></li>
             <li><a href="lab3/index.html">Lab 3: File Structures</a></li>
@@ -32,7 +34,19 @@
             <li><a href="lab11/index.html">Lab 11: Events and Forms</a></li>
             <li><a href="lab12/index.html">Lab 12: Conditionals</a></li>
             <li><a href="lab13/index.html">Lab 13: Loops</a></li>
+            <li><a href="lab14/index.html">Lab 14: Debugging</a></li>
         </ul>
+    </nav>
+
+    <nav class="links">
+        <h2>Experiments</h2>
+        <ul>
+            <li><a href="experiments/11-15-2023.html" target="_new">November 15, 2023</a></li>
+            <li><a href="experiments/11-30-2023.html" target="_new">November 30, 2023</a></li>
+        </ul>
+    </nav>
+
+    <nav class="links">
         <a href="legacy.html" target="_new">Old Homepage</a>
     </nav>
 </body>
