--- a/lab10/index.html
+++ b/lab10/index.html
@@ -20,7 +20,7 @@
 <body>
 	<main id="content">
 		<section>
-			<h1>Lab 10: JavaScript for the Web</h1>
+			<h1>Lab 10 - JavaScript for the Web</h1>
 
 			<div>
 				<h2>Challenge</h2>
@@ -49,6 +49,8 @@
 			<a href="../index.html">Home</a>
 			<a href="../lab9/index.html">Previous</a>
 			<a href="../lab11/index.html">Next</a>
+
+			<a href="js/lab.js" id="source-code" target="_new">Source Code</a>
 		</nav>
 	</main>
 </body>
