--- a/lab11/index.html
+++ b/lab11/index.html
@@ -14,7 +14,7 @@
 <body>
     <main id="content">
         <section>
-            <h1>Lab 11: JavaScript Events and Forms</h1>
+            <h1>Lab 11 - JavaScript Events and Forms</h1>
 
             <div>
                 <h2>Challenge</h2>
