--- a/lab12/index.html
+++ b/lab12/index.html
@@ -8,13 +8,14 @@
 
     <link rel="stylesheet" type="text/css" href="../css/site.css">
     <link rel="stylesheet" type="text/css" href="css/lab.css">
+    
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="js/lab.js" DEFER></script>
 </head>
 <body>
     <main id="content">
         <section>
-            <h1>Lab 12: Conditionals</h1>
+            <h1>Lab 12 - Conditionals</h1>
 
             <div>
                 <h2>Challenge</h2>
