--- a/lab13/index.html
+++ b/lab13/index.html
@@ -8,13 +8,14 @@
 
     <link rel="stylesheet" type="text/css" href="../css/site.css">
     <link rel="stylesheet" type="text/css" href="css/lab.css">
+    
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="js/lab.js" DEFER></script>
 </head>
 <body>
     <main id="content">
         <section>
-            <h1>Lab 13: Loops</h1>
+            <h1>Lab 13 - Loops</h1>
 
             <div>
                 <h2>Challenge</h2>
@@ -61,7 +62,7 @@
         <nav id="links">
             <a href="../index.html">Home</a>
 			<a href="../lab12/index.html">Previous</a>
-			<!--a href="../lab14/index.html">Next</a-->
+			<a href="../lab14/index.html">Next</a>
 
             <a href="js/lab.js" id="source-code" target="_new">Source Code</a>
         </nav>
