--- a/lab5/index.html
+++ b/lab5/index.html
@@ -54,11 +54,14 @@
 					</div>
 			</div>
 		</section>
+		
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
 			<a href="../index.html">Home</a>
 			<a href="../lab4/index.html">Previous</a>
 			<a href="../lab6/index.html">Next</a>
+
+			<a href="js/lab.js" id="source-code" target="_new">Source Code</a>
 		</nav>
 	</main>
 </body>
