--- a/lab7/index.html
+++ b/lab7/index.html
@@ -48,6 +48,8 @@
             <a href="../index.html">Home</a>
 			<a href="../lab6/index.html">Previous</a>
 			<a href="../lab8/index.html">Next</a>
+
+            <a href="js/lab.js" id="source-code" target="_new">Source Code</a>
         </nav>
     </main>
 </body>
