--- a/lab8/index.html
+++ b/lab8/index.html
@@ -20,7 +20,7 @@
 <body>
 	<main id="content">
 		<section>
-			<h1>Lab 8: Anon Functions and Callbacks</h1>
+			<h1>Lab 8 - Anon Functions and Callbacks</h1>
 			<div class="minor-section">
                 <h2>Challenge</h2>
                 <p>The goal of this lab was to experiment with anonymous functions and callbacks.</p>
@@ -42,6 +42,8 @@
 			<a href="../index.html">Home</a>
 			<a href="../lab7/index.html">Previous</a>
 			<a href="../lab9/index.html">Next</a>
+
+			<a href="js/lab.js" id="source-code" target="_new">Source Code</a>
 		</nav>
 	</main>
 </body>
