--- a/lab9/index.html
+++ b/lab9/index.html
@@ -20,7 +20,7 @@
 <body>
     <main id="content">
         <section>
-            <h1>Lab 9: Libraries and jQuery</h1>
+            <h1>Lab 9 - Libraries and jQuery</h1>
 
             <div class="special-section">
                 <h2>Challenge</h2>
@@ -50,6 +50,8 @@
             <a href="../index.html">Home</a>
 			<a href="../lab8/index.html">Previous</a>
 			<a href="../lab10/index.html">Next</a>
+
+            <a href="js/lab.js" id="source-code" target="_new">Source Code</a>
         </nav>
     </main>
 </body>
