Lab 15 + Homepage formatting
- Lab 15 completed
- Lab 15 links added to homepage & Lab 14 nav bar
- Homepage will now format differently on desktop devices

--- a/lab14/index.html
+++ b/lab14/index.html
@@ -73,7 +73,7 @@
         <nav id="links">
             <a href="../index.html">Home</a>
 			<a href="../lab13/index.html">Previous</a>
-			<!--a href="../lab15/index.html">Next</a-->
+			<a href="../lab15/index.html">Next</a>
 
             <a href="js/lab.js" id="source-code" target="_new">Source Code</a>
         </nav>
