--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <body>
     <section id="content">
         <h1>Akira's Site</h1>
-        <img id="my-portrait" src="./img/me.jpg" alt="Me" width="300">
-        <div id="about">
-            <h2>About Me</h2>
-            <p>Hi! My name is Akira, and I'm a second-year AGPM major. I'm interested in game design, writing, art, and
-                really all parts of game development. My hobbies include playing video games, drawing, and learning how
-                to play the keyboard.</p>
+        <div id="me">
+            <img id="my-portrait" src="./img/me.jpg" alt="Me" width="300">
+            <div id="about">
+                <h2>About Me</h2>
+                <p>Hi! My name is Akira, and I'm a second-year AGPM major. I'm interested in game design, writing, art, and
+                    really all parts of game development. My hobbies include playing video games, drawing, and learning how
+                    to play the keyboard.</p>
+            </div>
         </div>
     </section>
 
@@ -35,6 +37,7 @@
             <li><a href="lab12/index.html">Lab 12: Conditionals</a></li>
             <li><a href="lab13/index.html">Lab 13: Loops</a></li>
             <li><a href="lab14/index.html">Lab 14: Debugging</a></li>
+            <li><a href="lab15/index.html">Lab 15: AJAX</a></li>
         </ul>
     </nav>
 
