--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <ul>
             <li><a href="experiments/11-15-2023.html" target="_new">November 15, 2023</a></li>
             <li><a href="experiments/11-30-2023.html" target="_new">November 30, 2023</a></li>
+            <li><a href="experiments/12-4-2023.html" target="_new">December 4, 2023</a></li>
         </ul>
     </nav>
 
