--- a/lab15/index.html
+++ b/lab15/index.html
@@ -45,7 +45,7 @@
         <nav id="links">
             <a href="../index.html">Home</a>
 			<a href="../lab14/index.html">Previous</a>
-			<!--a href="../lab16/index.html">Next</a-->
+			<a href="../lab16/index.html">Next</a>
 
             <a href="js/lab.js" id="source-code" target="_new">Source Code</a>
             <a href="https://jservice.io/" id="api-link" target="_new">API</a>
